[package]
name = "leyline-envoy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
anyhow = "1.0"
serde_json = "1.0"
leyline-error = { path = "../crates/error" }

[[bin]]
name = "leyline-envoy"
path = "src/main.rs"
